@@ -4,7 +4,11 @@ import java.io.IOException;
 import java.time.Instant;
 import java.time.LocalDateTime;
 import java.util.List;
+import java.util.stream.Collectors;
 
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.Pageable;
+import org.springframework.data.jpa.domain.Specification;
 import org.springframework.stereotype.Service;
 import org.springframework.web.multipart.MultipartFile;
 
@@ -15,7 +19,9 @@ import com.checkplagiarism.plagiarism.domain.PlagiarismThresholds;
 import com.checkplagiarism.plagiarism.domain.Submission;
 import com.checkplagiarism.plagiarism.domain.User;
 import com.checkplagiarism.plagiarism.domain.response.ResSubmissionDTO;
+import com.checkplagiarism.plagiarism.domain.response.ResultPaginationDTO;
 import com.checkplagiarism.plagiarism.domain.response.SubmissionResponse;
+import com.checkplagiarism.plagiarism.domain.response.user.ResFetchUserDTO;
 import com.checkplagiarism.plagiarism.repository.AssignmentRepository;
 import com.checkplagiarism.plagiarism.repository.DocumentRepository;
 import com.checkplagiarism.plagiarism.repository.PlagiarismThresholdRepository;
@@ -73,14 +79,49 @@ public class SubmissionService {
     return submission;
     }
 
+    public Submission submit( MultipartFile file) throws IdInvalidException, IOException {
+        String email = this.securityUtil.getCurrentUserLogin().isPresent()
+                ? this.securityUtil.getCurrentUserLogin().get()
+                : null;
+        User user = this.userRepository.findByEmail(email);
+        String text = this.fileService.extractText(file);
+
+        Submission submission = new Submission();
+        if (!file.isEmpty() && file != null) {
+            submission.setFileUrl(file.getOriginalFilename());
+        }
+
+        submission.setStudent(user);
+        submission.setContent(text);
+        submission.setSubmittedAt(LocalDateTime.now());
+
+        submissionRepository.save(submission);
+
+        PlagiarismCheck check = checkService.createCheck(submission);
+
+        double percent = plagiarismService.checkPlagiarism(text, check);
+
+        checkService.finishCheck(check, percent);
+
+        documentService.saveDocument(text, "file_url");
+
+        submission.setPlagiarismPercent(percent);
+
+        submissionRepository.save(submission);
+
+        return submission;
+    }
+
     public SubmissionResponse convertToResponse(Submission submission) {
 
         return SubmissionResponse.builder()
                 .id(submission.getId())
-                .assignmentId(submission.getAssignment().getId())
-                .assignmentTitle(submission.getAssignment().getTitle())
-                .studentId(submission.getStudent().getId())
-                .studentName(submission.getStudent().getName())
+                .assignmentId(
+                        submission.getAssignment() != null ? submission.getAssignment().getId() : null)
+                .assignmentTitle(
+                        submission.getAssignment() != null ? submission.getAssignment().getTitle() : null)
+                .studentId(submission.getStudent() != null ? submission.getStudent().getId():null)
+                .studentName(submission.getStudent()!=null ? submission.getStudent().getName()    : null)
                 .plagiarismPercent(submission.getPlagiarismPercent())
                 .submittedAt(submission.getSubmittedAt())
                 .build();
@@ -104,12 +145,20 @@ public class SubmissionService {
                 .toList();
     }
 
-    public List<SubmissionResponse> getAllSubmissions() {
+      public ResultPaginationDTO handleGetAll(Specification<Submission> spec, Pageable page){
+        Page<Submission> sub= this.submissionRepository.findAll(spec, page);
+        ResultPaginationDTO rs=new ResultPaginationDTO();
+        ResultPaginationDTO.Meta meta=new ResultPaginationDTO.Meta();
+        meta.setPage(sub.getNumber() + 1);
+        meta.setPageSize(sub.getSize());
+        meta.setPages(sub.getTotalPages());
+        meta.setTotal(sub.getTotalElements());
 
-        return submissionRepository.findAll()
-                .stream()
-                .map(this::convertToResponse)
-                .toList();
+        List<SubmissionResponse> list=sub.getContent().stream().map(item->this.convertToResponse(item)).collect(Collectors.toList());
+
+        rs.setMeta(meta);
+        rs.setResults(list);
+        return rs;
     }
 
 
